--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,13 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@prisma/client": "5.11.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.11.0"
   }
 }
