--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0"
   },
